--- a/src/com/accupicks/client/LiveScoreKeepingHome.form
+++ b/src/com/accupicks/client/LiveScoreKeepingHome.form
@@ -49,6 +49,7 @@
             <LineBorder thickness="3"/>
           </Border>
         </Property>
+        <Property name="opaque" type="boolean" value="false"/>
       </Properties>
 
       <Layout>
