--- a/src/com/accupicks/client/RugbyLiveScoreKeepingInfo.form
+++ b/src/com/accupicks/client/RugbyLiveScoreKeepingInfo.form
@@ -189,7 +189,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="7&apos;s or Full 15:"/>
+            <Property name="text" type="java.lang.String" value="rbsbfbdfbdfgbf"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="HalfLengthCmb">
@@ -261,10 +261,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
-                <StringItem index="0" value="7&apos;S"/>
-                <StringItem index="1" value="Full 15"/>
-              </StringArray>
+              <StringArray count="0"/>
             </Property>
           </Properties>
         </Component>
