--- a/src/com/accupicks/client/RugbySetPositions.form
+++ b/src/com/accupicks/client/RugbySetPositions.form
@@ -188,7 +188,7 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <EmptySpace pref="12" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -514,7 +514,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="6. Flanker:"/>
+            <Property name="text" type="java.lang.String" value="6. OpenFlanker:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="Flanker6Cmb">
@@ -561,7 +561,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="7. openSideFlanker"/>
+            <Property name="text" type="java.lang.String" value="7. BlindFlanker"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="Eigthman8Cmb">
